--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Material Notes</string>
+    <string name="create_new_note">Create new note</string>
+    <string name="notes">Notes</string>
+    <string name="settings">Settings</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="close_note">Close note</string>
+    <string name="note_details">Note details</string>
 </resources>
